Fixed input button container width on mobile

--- a/src/views/Matrix/matrix.css
+++ b/src/views/Matrix/matrix.css
@@ -71,7 +71,7 @@
   }
 
   .matrix-view_input-buttons {
-    width: 70vw;
+    width: 100%;
   }
 
   .matrix-view_input-buttons button {
